# itable

./: .env.example  docker-compose.yml
server/: .gitignore  Dockerfile  Makefile  asgi.py  manage.py  mypy.ini  pyproject.toml  ruff.toml  settings.py
server/api/: exceptions.py  typedefs.py  urls.py
server/api/core/: api_view.py
server/api/helpers/: __init__.py  aget_object_or_404_json.py  api_view.py  dispatcher.py  model_converters.py  schema_mixins.py  strings.py
server/api/permissions/: __init__.py  is_portfolio_owner.py  permission_protocol.py
server/api/request_checkers/: __init__.py  authentication_checker.py  checker_protocol.py  methods_checker.py  permissions_checker.py  schema_checker.py
server/api/tests/: helpers.py  test_api_view.py  test_auth_endpoints.py  test_authentication.py  test_helpers.py  test_portfolio_endpoints.py  test_portfolios_endpoints.py  test_securities_endpoints.py  test_table_endpoints.py  test_tables_endpoints.py
server/api/utils/: __init__.py  dispatcher.py  schema_mixins.py  shortcuts.py
server/api/views/: __init__.py  api_view.py
server/api/views/auth/: __init__.py  login.py  logout.py  refresh.py
server/api/views/portfolios/: __init__.py  (+3 more)
server/apps/investment_tables/: apps.py
server/core/: asgi.py  settings.py
server/events/: event_bus.py  handlers.py
server/exchange/exchange/: __init__.py  imoex_api.py  protocols.py
server/exchange/models/: __init__.py  security.py
server/exchange/tests/: test_imoex_syncronizer.py  test_models.py  test_moex_integration.py
server/investment_tables/: apps.py
server/investment_tables/migrations/: 0001_initial.py  0002_alter_tabletemplateitem_unique_together_and_more.py  0004_tabletemplateitem_is_active.py  0005_tablesnapshotitem_coefficient.py  0006_tablesnapshotitem_coefficient_is_not_negative.py  0007_tablesnapshot_name.py  0008_tablesnapshot_is_active.py
server/investment_tables/models/: __init__.py  table_snapshot.py  table_snapshot_item.py  table_template.py  table_template_item.py
server/investment_tables/tests/: test_models.py
server/logger/: config.json  formatters.py  setup.py  tests.py
server/logging_config/: __init__.py  config.json  formatters.py  handlers.py  json_formatter.py  setup_logging.py  tests.py
server/portfolio/migrations/: 0001_initial.py  0002_alter_portfolioitem_portfolio_and_more.py  0003_rename_user_portfolio_owner.py  0004_alter_portfolio_options_alter_portfolioitem_options_and_more.py
server/portfolio/models/: __init__.py  portfolio.py  portfolio_item.py
server/portfolio/tests/: test_models.py
server/schemas/: portfolios.py  security.py
server/scripts/: coverage.sh  format_and_lint.sh  test.sh
server/services/portfolios/: service.py
server/services/securities/: service.py
server/tasks/: scheduler.py  tasks.py
server/tasks_scheduler/: tasks.py
server/tests/api/: helpers.py  test_api_view.py  test_auth_endpoints.py  test_helpers.py  test_portfolios_endpoints.py  test_securities_endpoints.py  test_tables_endpoints.py
server/tests/models/: test_exchange_models.py  test_investment_tables_models.py
server/tests/utils/: test_alru_method_shared_cache.py  test_async_atomic.py  test_lifespan_middleware.py
server/users/authentication/: backends.py  exceptions.py  jwt.py  middleware.py
server/users/migrations/: 0003_alter_itableuser_managers_remove_itableuser_username.py
server/users/models/: __init__.py  itable_user.py
server/utils/: __init__.py  circuit_breaker.py
server/utils/abstract_models/: __init__.py  created_updated.py  serializable.py
server/utils/asgi/: middlewares.py
server/utils/cache/: __init__.py  alru_method_shared_cache.py
server/utils/db_helpers/: __init__.py  async_atomic.py
server/utils/tests/: test_alru_method_shared_cache.py
(+133 files in other folders)
