[project]
name = "itable-server"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "aiomoex>=2.1.2",
    "apscheduler>=3.11.0",
    "async-lru>=2.0.4",
    "circuitbreaker>=2.1.0",
    "dacite>=1.9.2",
    "django>=5.1.6",
    "load-dotenv>=0.1.0",
    "psycopg[binary]>=3.2.4",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan==2.*",
    "coverage>=7.6.12",
    "django-stubs[compatible-mypy]>=5.1.3",
    "parameterized>=0.9.0",
    "ruff>=0.9.6",
]

[tool.mypy]
plugins = "mypy_django_plugin.main"
strict = true
check_untyped_defs = true
exclude = ['.*/tests.*']

[tool.django-stubs]
django_settings_module = "settings"

[[tool.mypy.overrides]]
module = ["circuitbreaker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
