[project]
name = "itable-server"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "aiomoex>=2.1.2",
    "apscheduler>=3.11.0",
    "async-lru>=2.0.4",
    "circuitbreaker>=2.1.0",
    "dacite>=1.9.2",
    "django>=5.1.6",
    "faststream>=0.5.42",
    "load-dotenv>=0.1.0",
    "nats-py>=2.10.0",
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.11.5",
    "pyjwt>=2.10.1",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "asgi-lifespan==2.*",
    "coverage>=7.6.12",
    "django-stubs[compatible-mypy]>=5.1.3",
    "dotenv-linter>=0.6.0",
    "parameterized>=0.9.0",
    "ruff>=0.9.6",
]

[tool.ruff]
extend-exclude = [
    "migrations",
    "static",
    "media",
]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "FAST", # FastAPI
    "A",    # flake8-builtins
    "ASYNC",# flake8-async
    "B",    # flake8-bugbear
    "LOG",  # flake8-logging
    "G",    # flake8-logging-format
    "RUF",  # Ruff-specific rules
    "PL",   # Pylint
    "C90",  # mccabe
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "F",    # Pyflakes
    "E",    # pcodestyle
    "I",    # isort
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    "DJ",   # flake8-django
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "FIX",  # flake8-fixme
    "ERA",  # eradicate
]

ignore = [
    "PTH123",
    "F403",
    "FIX002",
    "SIM105",
]

[tool.ruff.lint.isort]
known-first-party = [
    "api",
    "apps",
    "core",
    "logger",
    "services",
    "utils",
    "tasks",
    "tests",
]

force-sort-within-sections = true
order-by-type = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
plugins = "mypy_django_plugin.main"
strict = true
check_untyped_defs = true
exclude = ['tests.*']

[tool.django-stubs]
django_settings_module = "core.settings"

[[tool.mypy.overrides]]
module = ["circuitbreaker.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
